spade-tests/src/snapshots/spade_tests__parser__expected_expression_binop.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let abc = 1+#;
    abc
}


error: Unexpected `#`, expected expression
  ┌─ testinput:2:17
  │
2 │     let abc = 1+#;
  │                 ^ expected expression here


